# Customer-Retail-Analytics

./: .user.yml  README.md  dbt_project.yml  profiles.yml  pyproject.toml
.github/workflows/: dbt_docs_deploy.yml
data/ccl/: Product & Geography Sales Metrics (CCL Supplier) 010825.csv  Product & Geography Sales Metrics (CCL Supplier) 011525.csv  Product & Geography Sales Metrics (CCL Supplier) 012225.csv  Product & Geography Sales Metrics (CCL Supplier) 012925.csv  Product & Geography Sales Metrics (CCL Supplier) 2025.csv
data/ccl_stores/: Store List (CCL Supplier).csv
data/lcl_stores/: LCL_Sotres.csv
data/metro/: Metro_25.csv
data/metro_stores/: Store_List_Metro.csv
data/pfg/: Product & Geography Sales Metrics (Gold) 010125.csv  Product & Geography Sales Metrics (Gold) 010825.csv  Product & Geography Sales Metrics (Gold) 011525.csv  Product & Geography Sales Metrics (Gold) 012225.csv  Product & Geography Sales Metrics (Gold) 012925.csv  Product & Geography Sales Metrics (Gold) 121124.csv  Product & Geography Sales Metrics (Gold) 121824.csv  Product & Geography Sales Metrics (Gold) 122524.csv
data/pfg_stores/: Store List PFG.csv
data/sobeys/: Product & Geography Sales Metrics 050422.csv
data/sobeys_stores/: Store Ranking Sobeys.csv
docs/: homepage.md
hist_upload/: ccl.py  ccl_stores.py  fcl.py  lcl.py  lcl_stores.py  metro.py  metro_stores.py  pfg.py  pfg_stores.py  sobeys.py  sobeys_stores.py
macros/: generate_schema_name.sql
models/intermidiate/: int_ccl_stores.md  (+23 more)
seeds/: raw_discount_banners.csv  raw_product_mf.csv  raw_wno.csv
(+90 files in other folders)
